--- a/.github/workflows/ds.yml
+++ b/.github/workflows/ds.yml
@@ -2,12 +2,15 @@ name: Daily Sentiment
 
 on:
   schedule:
-    - cron: '55 8 * * *'   # 08:55 UTC = 16:55 SGT; adjust to 09:00 for 17:00 SGT if you prefer
+    # 08:55 UTC ≈ 16:55 SGT (buffer before your 5pm post). Change to '0 9 * * *' for exactly 17:00 SGT.
+    - cron: '55 08 * * *'
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write   # allows committing the generated files
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,75 +27,69 @@ jobs:
         env:
           COINGLASS_API_KEY: ${{ secrets.COINGLASS_API_KEY }}
         run: |
-          python - << 'PY'
-import os, json, requests
-from bs4 import BeautifulSoup
-from datetime import datetime
+          python - <<'PY'
+          import os, json, requests
+          from bs4 import BeautifulSoup
+          from datetime import datetime
 
-def fetch_crypto_fg():
-    r = requests.get("https://api.alternative.me/fng/?limit=2", timeout=30).json()
-    t, y = r["data"][0], r["data"][1]
-    return {"today": t["value"], "yesterday": y["value"],
-            "delta": int(t["value"]) - int(y["value"]),
-            "classification": t["value_classification"]}
+          def fetch_crypto_fg():
+              r = requests.get("https://api.alternative.me/fng/?limit=2", timeout=30).json()
+              t, y = r["data"][0], r["data"][1]
+              return {"today": t["value"], "yesterday": y["value"],
+                      "delta": int(t["value"]) - int(y["value"]),
+                      "classification": t["value_classification"]}
 
-def fetch_stock_fg():
-    # Placeholder (CNN doesn’t provide a free API). I’ll still post real-time public values when I generate the DS here.
-    return {"today":"—","yesterday":"—","delta":"—","classification":"—"}
+          def fetch_stock_fg():
+              # Placeholder; real scrape/API can be added later
+              return {"today":"—","yesterday":"—","delta":"—","classification":"—"}
 
-def fetch_funding(symbol):
-    key = os.getenv("COINGLASS_API_KEY")
-    if not key:
-        return {"note": "Add COINGLASS_API_KEY in repo Secrets to enable live funding."}
-    h = {"coinglassSecret": key}
-    url = "https://open-api.coinglass.com/api/futures/funding_rates"
-    out = {}
-    for s in [symbol]:
-        try:
-            d = requests.get(url, headers=h, params={"symbol": s}, timeout=30).json()
-            out[s] = d
-        except Exception as e:
-            out[s] = {"error": str(e)}
-    return out
+          def fetch_funding(symbol):
+              key = os.getenv("COINGLASS_API_KEY")
+              if not key:
+                  return {"note": "Add COINGLASS_API_KEY in repo Secrets to enable live funding."}
+              h = {"coinglassSecret": key}
+              url = "https://open-api.coinglass.com/api/futures/funding_rates"
+              try:
+                  return requests.get(url, headers=h, params={"symbol": symbol}, timeout=30).json()
+              except Exception as e:
+                  return {"error": str(e)}
 
-def fetch_obv(symbol):
-    # Aiolux often needs JS; this will be filled by me in the posted DS if the page is scrapeable that day.
-    return {"symbol": symbol, "obv": "—"}
+          def placeholder_obv(symbol):
+              return {"symbol": symbol, "obv": "—"}
 
-def fetch_sbet():
-    # StrategicETHReserve has no public API; this placeholder keeps the pipeline intact.
-    return {"treasury":"—","liquidity":"—","mcap":"—","holders":"—","whale_moves":"—"}
+          def placeholder_sbet():
+              return {"treasury":"—","liquidity":"—","mcap":"—","holders":"—","whale_moves":"—"}
 
-def fetch_putcall_vix_dxy():
-    # Placeholders; I’ll fetch live numbers when I post DS here.
-    return {"equity_pc":"—","total_pc":"—","vix_today":"—","vix_yday":"—","dxy_today":"—","dxy_yday":"—"}
+          def placeholder_other():
+              return {"equity_pc":"—","total_pc":"—","vix_today":"—","vix_yday":"—","dxy_today":"—","dxy_yday":"—"}
 
-now = datetime.utcnow().strftime("%Y-%m-%d %H:%M UTC")
-data = {
-  "generated_at": now,
-  "crypto_fg": fetch_crypto_fg(),
-  "stock_fg": fetch_stock_fg(),
-  "funding": {"BTC": fetch_funding("BTC"), "ETH": fetch_funding("ETH")},
-  "btc_obv": fetch_obv("BTCUSD"),
-  "eth_obv": fetch_obv("ETHUSD"),
-  "sbet": fetch_sbet(),
-  "other": fetch_putcall_vix_dxy()
-}
+          now = datetime.utcnow().strftime("%Y-%m-%d %H:%M UTC")
+          data = {
+            "generated_at": now,
+            "crypto_fg": fetch_crypto_fg(),
+            "stock_fg": fetch_stock_fg(),
+            "funding": {"BTC": fetch_funding("BTC"), "ETH": fetch_funding("ETH")},
+            "btc_obv": placeholder_obv("BTCUSD"),
+            "eth_obv": placeholder_obv("ETHUSD"),
+            "sbet": placeholder_sbet(),
+            "other": placeholder_other()
+          }
 
-open("daily_sentiment.json","w").write(json.dumps(data, indent=2))
-md = f"""# 📊 Daily Sentiment (auto build)
-Generated: {now}
+          open("daily_sentiment.json","w").write(json.dumps(data, indent=2))
+          md = f"""# 📊 Daily Sentiment (auto build)
+          Generated: {now}
 
-1) **Crypto F&G**: {data['crypto_fg']['today']} ({data['crypto_fg']['classification']}) | Y: {data['crypto_fg']['yesterday']} | Δ: {data['crypto_fg']['delta']}
-2) **Stock F&G**: {data['stock_fg']['today']} | Y: {data['stock_fg']['yesterday']} | Δ: {data['stock_fg']['delta']}
-3) **Funding**: (filled via CoinGlass if key present) 
-4) **Put/Call**: —
-5) **VIX/DXY**: —
-6) **OBV BTC/ETH**: —
-7) **SBET**: —
-"""
-open("daily_sentiment.md","w").write(md)
-PY
+          1) **Crypto F&G**: {data['crypto_fg']['today']} ({data['crypto_fg']['classification']}) | Y: {data['crypto_fg']['yesterday']} | Δ: {data['crypto_fg']['delta']}
+          2) **Stock F&G**: {data['stock_fg']['today']} | Y: {data['stock_fg']['yesterday']} | Δ: {data['stock_fg']['delta']}
+          3) **Funding**: (filled via CoinGlass if key present)
+          4) **Put/Call**: —
+          5) **VIX/DXY**: —
+          6) **OBV BTC/ETH**: —
+          7) **SBET**: —
+          """
+          open("daily_sentiment.md","w").write(md)
+          print("DS artifacts written.")
+          PY
 
       - name: Commit DS artifacts
         run: |
